# api/controllers/auth/auth.controller.js
@@ -2,10 +2,12 @@ const jwt = require("jsonwebtoken");
 const StandardRespone = require("../../dto/response/standard.res");
 const stardardResponse = new StandardRespone();
 
+const prefix = "/api/v1";
+
 class Auth {
 
     /**
-     * user : {_id: ObjectId, fullname: String, isSuperAdmin : boolean, workPlaces : []}
+     * user : {_id: ObjectId, fullname: String, email}
      * workPlaces: [
      *      {storage : {_id, name} , role:  {_id, permission, name} }
      * ]
@@ -14,57 +16,32 @@ class Auth {
     isLogin(req, res, next) {
         if (req.user) next();
         else {
-            res.status(403);
-            let errorEntity = stardardResponse.clientError(403, "Token expired or not exist");
-            return res.status(400).json(errorEntity);
+            let errorEntity = stardardResponse.clientError(403, "Bạn chưa đăng nhập !");
+            return res.status(403).json(errorEntity);
         }
     }
 
     isAuthorization(req, res, next) {
-        console.log("req: ", req.originalUrl);
-        console.log("req :", req.method);
+        console.log("req : ", `${req.route.path}:${req.method}`);
         if (req.user && req.user.role) {
             if (req.user.role.name == "SUPER_ADMIN") {
                 next();
             } else {
-                // let permission = req.user.role.permission;
-                // let check = permission.filter(ele=>{
-
-                // })
-                next();
+                let permission = req.user.role.permission;
+                let tmp = permission.find(ele => {
+                    return (ele == `${req.route.path}:${req.method}`);
+                })
+                if (tmp) {
+                    next();
+                } else {
+                    let errorEntity = stardardResponse.clientError(403, "Bạn không có quyền !");
+                    return res.status(403).json(errorEntity);
+                }
             }
         } else {
-            res.status(403);
-            let errorEntity = stardardResponse.clientError(403, "Token expired or not exist");
-            return res.status(400).json(errorEntity);
+            let errorEntity = stardardResponse.clientError(403, "Bạn không có quyền !");
+            return res.status(403).json(errorEntity);
         }
-    }
-
-    isSuperAdmin(req, res, next) {
-        if (req.user && req.user.role && req.user.role.name == "SUPER_ADMIN") {
-            next();
-        } else {
-            res.status(403);
-            let errorEntity = stardardResponse.clientError(403, "You aren't SUPER ADMIN");
-            return res.status(400).json(errorEntity);
-        }
-
-    }
-
-    isAdmin(req, res, next) {
-        next();
-    }
-
-    isAccountant(req, res, next) {
-        next();
-    }
-
-    isStocker(req, res, next) {
-        next();
-    }
-
-    isEmployee(req, res, next) {
-        next();
     }
 }
 
